extends Node3D


@onready var switch0: Node3D = %Switch3D0
@onready var switch1: Node3D = %Switch3D1
@onready var switch2: Node3D = %Switch3D2
@onready var switch3: Node3D = %Switch3D3
@onready var switch4: Node3D = %Switch3D4
@onready var switch5: Node3D = %Switch3D5



# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
